# factory-incident-engine

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/golden/: bearing-CNC-19-0.json  bearing-PRESS-02-1.json  cooling-CNC-17-0.json  cooling-CNC-18-1.json  insufficient-CNC-17-1.json  insufficient-PRESS-02-0.json  no_incident-CNC-19-0.json  no_incident-PRESS-02-1.json  operator_config-CNC-18-0.json  operator_config-CNC-19-1.json  overload-CNC-17-0.json  overload-CNC-18-1.json  sensor_fault-CNC-18-0.json  sensor_fault-CNC-19-1.json  tool_wear-CNC-17-1.json  tool_wear-PRESS-02-0.json
docs/: architecture.md  data-model.md  evaluation.md  failure-model.md
fie/: __init__.py  cli.py  config.py  models.py  reliability.py  schema.sql  store.py
fie/agent/: __init__.py  claude_engine.py  engine.py  features.py  llm.py  ml_engine.py  reconstruct.py  tools.py
fie/eval/: __init__.py  evaluators.py  golden.py  harness.py
fie/ingestion/: __init__.py  pipeline.py  validate.py
fie/ml/: __init__.py  azure_pdm.py  dataset.py  external.py  train.py
fie/replay/: __init__.py  regression.py  replay.py
fie/simulator/: __init__.py  generate.py  scenarios.py
fie/web/: __init__.py  actions.py  charts.py  server.py
prep/: 00-roadmap.md  README.md
prep/01-concepts/: llm-apis.md  (+6 more)
scripts/: start.sh  stop.sh
tests/: conftest.py  test_agent.py  test_azure_pdm.py  test_backends.py  test_eval_replay.py  test_external.py  test_ingestion.py  test_reliability.py  test_store.py  test_web.py
(+33 files in other folders)
