[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factory-incident-engine"
version = "0.8.0"
description = "Reconstructs manufacturing incidents from messy telemetry, with a data-quality gate, evaluation harness, and deterministic replay."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6", "jinja2>=3.1"]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.scripts]
fie = "fie.cli:main"

[tool.setuptools.packages.find]
include = ["fie*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
